    - removed implemented FIXME

  [ Michael Vogt ]
  * softwarestore/view/appdetailsview.py:
    - ensure the gnome debconf frontend is used
    - make screenshot loading url configurable
    - cleanup
    - use internal viewer for large screenshot display 
      (thanks to Andrew Higginson)
    - made install/remove button enable again if the user
      cancels the action

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 11:35:48 +0200

software-store (0.3.2) karmic; urgency=low

  * softwarestore/view/viewswitcher.py:
    - make the iconsize 24px (LP: #425797)
  * data/ubuntu-software-store.desktop.in:
    - add "NoDisplay=true", we enforce showing it at a special
      location via a gnome-panel patch (LP: #426209)
  * merge fixes from rugby471, many thanks!
  * softwarestore/view/appview.py:
    - sort in locale friendly way
  * softwarestore/app.py:
    - call setlocale() to ensure python-apt provides translated
      package descriptions
  * do not display progress circle once the screenshot has 
    loaded (LP: #425859) - thanks to rugby471

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Sep 2009 23:25:57 +0200

software-store (0.3.1) karmic; urgency=low

  * softwarestore/app.py, softwarestore/view/appdetailsview.py:
    - send pkgname instead of apt.Package object in the selected
      signal (LP: #427157)
  * softwarestore/view/availablepane.py:
    - Show installed software in the "Get Free Software" pane
      as well (as the spec says) LP: #427014
  * softwarestore/view/appview.py:
    - log icon_load errors only in loglevel DEBUG to avoid
      noise on the console
  * softwarestore/view/searchentry.py:
    - grab focus when clear icon is clicked (LP: #421552)
  * data/ui/SoftwareStore.ui:
    - adjust default size so that all icons fit into the
      window in a english locale (thanks to mac_v)
  * updated icon (LP: #427279)
  * properly update the current app list (ensure installed emblems
    are good) if the cache is re-opened