@@ -39,6 +39,9 @@ software-store (0.3.3) UNRELEASEDkarmic; urgency=low
       (thanks to Andrew Higginson)
     - made install/remove button enable again if the user
       cancels the action
+    - use the new ShowImageDialog
+  * softwarestore/view/widgets/imagedialog.py:
+    - new widget for the large screenshot display
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 11:35:48 +0200
 
